frontend/test/should_fail/index_exec_node_fromIndexMultipleFromTo_index_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	{ i:set<Node>=nodesFromIndexMultipleFromTo(j, 0, 1, food, 42.0, 42.0 + 1) }
}